deploy/k8s/service.yaml
# trunk-ignore-all(checkov/CKV_K8S_21)
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ilpostapi
    group: ilpostapi
  name: ilpostapi
spec:
  ports:
    - name: web
      port: 5000
      targetPort: 5000
  selector:
    app: ilpostapi
    group: ilpostapi
